# rust-sdp

./: Cargo.toml  README.rst  sdp_mp3.txt  sdp_ogg.txt
src/: error.rs  key.rs  lib.rs  sdp.txt
src/value/: attr.rs  attrs.rs  bandwidth.rs  base.rs  connection.rs  email.rs  media.rs  mediadescription.rs  mod.rs  origin.rs  sessiondescription.rs  time.rs  timedescription.rs  uri.rs  value.rs  version.rs
